data/derived/comb/progs/unify/prog4624.ml.out
Characters 118-120:
  | Average (e1,e2)-> (e1+.e2)/2
                       ^^
Error: This expression has type expr but an expression was expected of type
         float
